--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -9,8 +9,7 @@ update-url = https://raw.githubusercontent.com/olocn/rule/master/Shadowrocket.co
 
 
 [Rule]
-DOMAIN-SUFFIX,office.com,PROXY
-DOMAIN,d.docs.live.net,PROXY
+DOMAIN,ocsp.digicert.com,DIRECT
 USER-AGENT,com.apple.trustd*,DIRECT
 DOMAIN,testflight.apple.com,PROXY
 DOMAIN-SUFFIX,appsto.re,PROXY
@@ -45,8 +44,8 @@ USER-AGENT,coffeecorp*,DIRECT
 USER-AGENT,restaurant-mobile*,DIRECT
 DOMAIN,app.adjust.com,DIRECT
 DOMAIN-SUFFIX,googletraveladservices.com,DIRECT
-DOMAIN,analyticsinsights-pa.googleapis.com,PROXY
-DOMAIN,analyticsreporting.googleapis.com,PROXY
+DOMAIN,analyticsinsights-pa.googleapis.com,DIRECT
+DOMAIN,analyticsreporting.googleapis.com,DIRECT
 DOMAIN,dl.google.com,DIRECT
 DOMAIN,mtalk.google.com,DIRECT
 DOMAIN,livew.l.qq.com,DIRECT
@@ -114,8 +113,6 @@ DOMAIN-SUFFIX,bayimob.com,REJECT
 DOMAIN-SUFFIX,bjvvqu.cn,REJECT
 DOMAIN-SUFFIX,bulldogcpi.com,REJECT
 DOMAIN-SUFFIX,clotfun.mobi,REJECT
-
-olocn, [13.02.20 17:51]
 DOMAIN-SUFFIX,clotfun.online,REJECT
 DOMAIN-SUFFIX,cloudmobi.net,REJECT
 DOMAIN-SUFFIX,crwdcntrl.net,REJECT
@@ -237,8 +234,6 @@ DOMAIN,duclick.baidu.com,REJECT
 DOMAIN,mobads.baidu.com,REJECT
 DOMAIN,mobads-logs.baidu.com,REJECT
 DOMAIN,nsclick.baidu.com,REJECT
-
-olocn, [13.02.20 17:51]
 DOMAIN,ad.toutiao.com,REJECT
 DOMAIN,adx.yiche.com,REJECT
 DOMAIN,log.ycapp.yiche.com,REJECT
@@ -349,6 +344,8 @@ DOMAIN,wxsnsdythumb.wxs.qq.com,REJECT
 DOMAIN,admonitor.thepaper.cn,REJECT
 DOMAIN,adpai.thepaper.cn,REJECT
 DOMAIN,imgadpai.thepaper.cn,REJECT
+DOMAIN-SUFFIX,office.com,PROXY
+DOMAIN,d.docs.live.net,PROXY
 DOMAIN,abc.com,PROXY
 DOMAIN,abc.net.au,PROXY
 DOMAIN,api.amplitude.com,PROXY
@@ -361,8 +358,6 @@ DOMAIN-SUFFIX,tits-guru.com,PROXY
 DOMAIN-SUFFIX,jike.info,PROXY
 DOMAIN-SUFFIX,photosync-app.com,PROXY
 DOMAIN-SUFFIX,yande.re,PROXY
-
-olocn, [13.02.20 17:51]
 DOMAIN,docs.live.net,PROXY
 DOMAIN,graph.microsoft.com,PROXY
 DOMAIN,id.heroku.com,PROXY
@@ -491,10 +486,7 @@ DOMAIN-SUFFIX,castbox.fm,PROXY
 DOMAIN-SUFFIX,cbc.ca,PROXY
 DOMAIN-SUFFIX,cdninstagram.com,PROXY
 DOMAIN-SUFFIX,cdw.com,PROXY
-DOMAIN-SUFFIX,cent1auro.com.
-
-olocn, [13.02.20 17:51]
-br,PROXY
+DOMAIN-SUFFIX,cent1auro.com.br,PROXY
 DOMAIN-SUFFIX,certificate-transparency.org,PROXY
 DOMAIN-SUFFIX,cfos.de,PROXY
 DOMAIN-SUFFIX,change.org,PROXY
@@ -619,8 +611,6 @@ DOMAIN-SUFFIX,gmodules.com,PROXY
 DOMAIN-SUFFIX,go.com,PROXY
 DOMAIN-SUFFIX,godoc.org,PROXY
 DOMAIN-SUFFIX,golang.org,PROXY
-
-olocn, [13.02.20 17:51]
 DOMAIN-SUFFIX,goo.ne.jp,PROXY
 DOMAIN-SUFFIX,googlevideo.com,PROXY
 DOMAIN-SUFFIX,gov,PROXY
@@ -750,8 +740,6 @@ DOMAIN-SUFFIX,outlookgroups.ms,PROXY
 DOMAIN-SUFFIX,p0rn-downloads.com,PROXY
 DOMAIN-SUFFIX,pandora.com,PROXY
 DOMAIN-SUFFIX,parastorage.com,PROXY
-
-olocn, [13.02.20 17:51]
 DOMAIN-SUFFIX,patreon.com,PROXY
 DOMAIN-SUFFIX,pinimg.com,PROXY
 DOMAIN-SUFFIX,pixiv.cat,PROXY
@@ -876,10 +864,7 @@ DOMAIN-SUFFIX,hdslb.com,DIRECT
 DOMAIN-SUFFIX,blizzard.com,DIRECT
 DOMAIN-SUFFIX,battle.net,DIRECT
 DOMAIN,blzddist1-a.akamaihd.net,DIRECT
-DOMAIN-SUFFIX,feiliao.
-
-olocn, [13.02.20 17:51]
-com,DIRECT
+DOMAIN-SUFFIX,feiliao.com,DIRECT
 DOMAIN-SUFFIX,pstatp.com,DIRECT
 DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
@@ -1000,10 +985,7 @@ DOMAIN-SUFFIX,jpopsuki.eu,DIRECT
 DOMAIN-SUFFIX,keepfrds.com,DIRECT
 DOMAIN-SUFFIX,madsrevolution.net,DIRECT
 DOMAIN-SUFFIX,m-team.cc,DIRECT
-DOMAIN-SUFFIX,nanyangpt.
-
-olocn, [13.02.20 17:51]
-com,DIRECT
+DOMAIN-SUFFIX,nanyangpt.com,DIRECT
 DOMAIN-SUFFIX,ncore.cc,DIRECT
 DOMAIN-SUFFIX,open.cd,DIRECT
 DOMAIN-SUFFIX,ourbits.club,DIRECT
@@ -1125,10 +1107,7 @@ DOMAIN-SUFFIX,ithome.com,DIRECT
 DOMAIN-SUFFIX,java.com,DIRECT
 DOMAIN-SUFFIX,jidian.im,DIRECT
 DOMAIN-SUFFIX,kaiyanapp.com,DIRECT
-DOMAIN-SUFFIX,kaspersky-labs.
-
-olocn, [13.02.20 17:51]
-com,DIRECT
+DOMAIN-SUFFIX,kaspersky-labs.com,DIRECT
 DOMAIN-SUFFIX,keepcdn.com,DIRECT
 DOMAIN-SUFFIX,kkmh.com,DIRECT
 DOMAIN-SUFFIX,licdn.com,DIRECT
@@ -1197,6 +1176,8 @@ IP-CIDR,100.64.0.0/10,DIRECT,no-resolve
 IP-CIDR,224.0.0.0/24,DIRECT,no-resolve
 IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
 IP-CIDR,119.28.28.28/32,DIRECT,no-resolve
+DOMAIN,download.jetbrains.com,DIRECT
+DOMAIN,images-cn.ssl-images-amazon.com,DIRECT
 GEOIP,CN,DIRECT
 FINAL,PROXY
 
