--- a/surge/olo.conf
+++ b/surge/olo.conf
@@ -4,6 +4,7 @@ skip-proxy = 192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0
 bypass-system = true
 dns-server = 119.29.29.29,223.5.5.5,system
 allow-wifi-access = false
+enhanced-mode-by-rule = 0
 ipv6 = false
 
 [Proxy]
