--- a/surge/olo.conf
+++ b/surge/olo.conf
@@ -23,10 +23,10 @@ game = select,DIRECT,Proxy
 
 [Rule]
 
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/direct.list,direct
+#RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/direct.list,direct
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/game.list,game
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/proxy.list,Proxy
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/reject.list,reject
+#RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/proxy.list,Proxy
+#RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/reject.list,reject
 DOMAIN,testflight.apple.com,PROXY
 DOMAIN-SUFFIX,appsto.re,PROXY
 DOMAIN-SUFFIX,itunes.apple.com,PROXY
