--- a/surge/olo.conf
+++ b/surge/olo.conf
@@ -58,7 +58,7 @@ DOMAIN,news-edge.apple.com,Proxy
 DOMAIN,news-events.apple.com,Proxy
 DOMAIN,apple.comscoreresearch.com,Proxy
 
-user-agent,com.apple.trustd*,DIRECT
+USER-AGENT,com.apple.trustd*,DIRECT
 DOMAIN-SUFFIX,aaplimg.com,Apple
 DOMAIN-SUFFIX,apple.co,Apple
 DOMAIN-SUFFIX,apple.com,Apple
@@ -113,7 +113,7 @@ DOMAIN-SUFFIX,taboola.com,REJECT
 DOMAIN,log.ihuman.com,REJECT
 DOMAIN,alogs.umeng.com,REJECT
 DOMAIN,stun.services.mozilla.com,REJECT
-user-agent,*SogouInput*,REJECT
+USER-AGENT,*SogouInput*,REJECT
 DOMAIN-SUFFIX,jpush.cn,REJECT
 DOMAIN-SUFFIX,appadhoc.com,REJECT
 DOMAIN-SUFFIX,sogou.com,REJECT
