--- a/R2S/proxy.yaml
+++ b/R2S/proxy.yaml
@@ -657,3 +657,6 @@ payload:
   - IP-CIDR,173.194.0.0/16
   - IP-CIDR,74.125.0.0/16
   - IP-CIDR,35.186.224.47/32
+  - IP-CIDR,125.209.208.0/20
+  - IP-CIDR,147.92.128.0/17
+  - IP-CIDR,203.104.144.0/21
