--- a/R2S/proxy.yaml
+++ b/R2S/proxy.yaml
@@ -659,4 +659,5 @@ payload:
   - IP-CIDR,35.186.224.47/32
   - IP-CIDR,125.209.208.0/20
   - IP-CIDR,147.92.128.0/17
+  - IP-CIDR,103.2.30.0/23
   - IP-CIDR,203.104.144.0/21
