--- a/R2S/proxy.yaml
+++ b/R2S/proxy.yaml
@@ -1,5 +1,6 @@
 payload:
   - DOMAIN-SUFFIX,yande.re
+  - DOMAIN-SUFFIX,konachan.com
   - DOMAIN-SUFFIX,konachan.net 
   - DOMAIN-SUFFIX,tucahuand.com  
   - DOMAIN-SUFFIX,netcdn.space 
