--- a/R2S/proxy.yaml
+++ b/R2S/proxy.yaml
@@ -1,4 +1,10 @@
 payload:
+  - DOMAIN-KEYWORD,blogspot
+  - DOMAIN-KEYWORD,gmail
+  - DOMAIN-KEYWORD,google
+  - DOMAIN-KEYWORD,gstatic
+  - DOMAIN-KEYWORD,facebook
+  - DOMAIN-KEYWORD,twitter
   - DOMAIN-SUFFIX,yande.re
   - DOMAIN-SUFFIX,konachan.com
   - DOMAIN-SUFFIX,konachan.net 
@@ -19,7 +25,6 @@ payload:
   - DOMAIN-SUFFIX,youtube.com
   - DOMAIN-SUFFIX,ytimg.com
   - DOMAIN,youtubei.googleapis.com
-  - DOMAIN,yt3.ggpht.com
   - DOMAIN-SUFFIX,netflix.com
   - DOMAIN-SUFFIX,netflix.net
   - DOMAIN-SUFFIX,nflxext.com
@@ -39,7 +44,7 @@ payload:
   - DOMAIN-SUFFIX,netflixdnstest9.com
   - DOMAIN-SUFFIX,mytvsuper.com
   - DOMAIN-SUFFIX,tvb.com
-  - DOMAIN-SUFFIX,d3c7rimkq79yfu.cloudfront.net
+  - DOMAIN,d3c7rimkq79yfu.cloudfront.net
   - DOMAIN-SUFFIX,linetv.tw
   - DOMAIN-SUFFIX,profile.line-scdn.net
   - DOMAIN-SUFFIX,nexitallysecure.com
@@ -49,7 +54,6 @@ payload:
   - DOMAIN-SUFFIX,265.com
   - DOMAIN-SUFFIX,2mdn.net
   - DOMAIN-SUFFIX,abc.xyz
-  - DOMAIN-SUFFIX,adservice.google.com
   - DOMAIN-SUFFIX,ampproject.org
   - DOMAIN-SUFFIX,android.com
   - DOMAIN-SUFFIX,androidify.com
@@ -61,8 +65,6 @@ payload:
   - DOMAIN-SUFFIX,beacons3.gvt2.com
   - DOMAIN-SUFFIX,blogger.com
   - DOMAIN-SUFFIX,c.admob.com
-  - DOMAIN-SUFFIX,c.android.clients.google.com
-  - DOMAIN-SUFFIX,cache.pack.google.com
   - DOMAIN-SUFFIX,capitalg.com
   - DOMAIN-SUFFIX,certificate-transparency.org
   - DOMAIN-SUFFIX,chrome.com
@@ -70,36 +72,19 @@ payload:
   - DOMAIN-SUFFIX,chromestatus.com
   - DOMAIN-SUFFIX,chromium.org
   - DOMAIN-SUFFIX,clickserve.dartsearch.net
-  - DOMAIN-SUFFIX,corp.google.com
   - DOMAIN-SUFFIX,creativelab5.com
   - DOMAIN-SUFFIX,crl.pki.goog
   - DOMAIN-SUFFIX,debug.com
   - DOMAIN-SUFFIX,deepmind.com
   - DOMAIN-SUFFIX,dialogflow.com
-  - DOMAIN-SUFFIX,dl.google.com
-  - DOMAIN-SUFFIX,dl.l.google.com
-  - DOMAIN-SUFFIX,docs.google.com
-  - DOMAIN-SUFFIX,doubleclick.net
-  - DOMAIN-SUFFIX,drive.google.com
   - DOMAIN-SUFFIX,firebase-settings.crashlytics.com
   - DOMAIN-SUFFIX,firebaseio.com
   - DOMAIN-SUFFIX,getmdl.io
   - DOMAIN-SUFFIX,getoutline.org
   - DOMAIN-SUFFIX,ggpht.com
-  - DOMAIN-SUFFIX,gmail.com
   - DOMAIN-SUFFIX,gmodules.com
   - DOMAIN-SUFFIX,godoc.org
   - DOMAIN-SUFFIX,golang.org
-  - DOMAIN-SUFFIX,google-analytics.com
-  - DOMAIN-SUFFIX,google.cn
-  - DOMAIN-SUFFIX,googleadservices.com
-  - DOMAIN-SUFFIX,googleanalytics.com
-  - DOMAIN-SUFFIX,googleapis.com
-  - DOMAIN-SUFFIX,googledrive.com
-  - DOMAIN-SUFFIX,googlesyndication.com
-  - DOMAIN-SUFFIX,googletagmanager.com
-  - DOMAIN-SUFFIX,googletagservices.com
-  - DOMAIN-SUFFIX,googleusercontent.com
   - DOMAIN-SUFFIX,gstatic.com
   - DOMAIN-SUFFIX,gtm.oasisfeng.com
   - DOMAIN-SUFFIX,gv.com
@@ -112,39 +97,25 @@ payload:
   - DOMAIN-SUFFIX,material.io
   - DOMAIN-SUFFIX,mtalk.google.com
   - DOMAIN-SUFFIX,ocsp.pki.goog
-  - DOMAIN-SUFFIX,pagead-googlehosted.l.google.com
-  - DOMAIN-SUFFIX,pki-goog.l.google.com
   - DOMAIN-SUFFIX,polymer-project.org
   - DOMAIN-SUFFIX,recaptcha.net
-  - DOMAIN-SUFFIX,safebrowsing-cache.google.com
   - DOMAIN-SUFFIX,settings.crashlytics.com
   - DOMAIN-SUFFIX,shattered.io
-  - DOMAIN-SUFFIX,ssl-google-analytics.l.google.com
   - DOMAIN-SUFFIX,synergyse.com
   - DOMAIN-SUFFIX,telephony.goog
   - DOMAIN-SUFFIX,tensorflow.org
   - DOMAIN-SUFFIX,tfhub.dev
   - DOMAIN-SUFFIX,tiltbrush.com
-  - DOMAIN-SUFFIX,toolbarqueries.google.com
-  - DOMAIN-SUFFIX,tools.google.com
-  - DOMAIN-SUFFIX,tools.l.google.com
   - DOMAIN-SUFFIX,waveprotocol.org
   - DOMAIN-SUFFIX,waymo.com
   - DOMAIN-SUFFIX,webmproject.org
   - DOMAIN-SUFFIX,webrtc.org
   - DOMAIN-SUFFIX,whatbrowser.org
   - DOMAIN-SUFFIX,widevine.com
-  - DOMAIN-SUFFIX,www-googletagmanager.l.google.com
   - DOMAIN-SUFFIX,x.company
   - DOMAIN-SUFFIX,xn--ngstr-lra8j.com
   - DOMAIN-SUFFIX,youtu.be
   - DOMAIN-SUFFIX,yt.be
-  - DOMAIN-KEYWORD,blogspot
-  - DOMAIN-KEYWORD,gmail
-  - DOMAIN-KEYWORD,google
-  - DOMAIN-KEYWORD,gstatic
-  - DOMAIN-SUFFIX,onedrive.live.com
-  - DOMAIN-SUFFIX,xboxlive.com
   - DOMAIN-SUFFIX,cdninstagram.com
   - DOMAIN-SUFFIX,fb.com
   - DOMAIN-SUFFIX,fb.me
@@ -160,8 +131,7 @@ payload:
   - DOMAIN-SUFFIX,rocksdb.org
   - DOMAIN-SUFFIX,whatsapp.com
   - DOMAIN-SUFFIX,whatsapp.net
-  - DOMAIN-KEYWORD,facebook
-  - DOMAIN-KEYWORD,twitter
+
   - DOMAIN-SUFFIX,line.me
   - DOMAIN-SUFFIX,line-apps.com
   - DOMAIN-SUFFIX,line-scdn.net
@@ -583,10 +553,6 @@ payload:
   - DOMAIN,news-edge.Apple.com
   - DOMAIN,news-events.Apple.com
   - DOMAIN-SUFFIX,admin.recaptcha.net
-  - DOMAIN-SUFFIX,1drv.com
-  - DOMAIN-SUFFIX,1drv.ms
-  - DOMAIN-SUFFIX,live.com
-  - DOMAIN-SUFFIX,live.net
   - DOMAIN-SUFFIX,livefilestore.com
   - DOMAIN-SUFFIX,storage.msn.com
   - DOMAIN-SUFFIX,0rz.tw
