--- a/R2S/proxy.yaml
+++ b/R2S/proxy.yaml
@@ -5,6 +5,8 @@ payload:
   - DOMAIN-KEYWORD,gstatic
   - DOMAIN-KEYWORD,facebook
   - DOMAIN-KEYWORD,twitter
+  - DOMAIN,cdn.reimu.net
+  - DOMAIN,img.shields.io
   - DOMAIN,docs.rsshub.app
   - DOMAIN-SUFFIX,rsshub.app
   - DOMAIN-SUFFIX,skynightmidm.com
