--- a/R2S/proxy.yaml
+++ b/R2S/proxy.yaml
@@ -15,6 +15,7 @@ payload:
   - DOMAIN-SUFFIX,tits-guru.com
   - DOMAIN-SUFFIX,pixiv.cat
   - DOMAIN-SUFFIX,rdimg.com
+  - DOMAIN-SUFFIX,pximg.net
   - DOMAIN-SUFFIX,inoreader.com
   - DOMAIN-SUFFIX,trankynam.com
   - DOMAIN-SUFFIX,yande.re
