--- a/R2S/YouTube.yaml
+++ b/R2S/YouTube.yaml
@@ -6,6 +6,7 @@ payload:
   - DOMAIN-SUFFIX,sexyno1.com
   - DOMAIN-SUFFIX,playio1.com
   - DOMAIN-SUFFIX,addthis.com
+  - DOMAIN-SUFFIX,sehuatang.net
   - DOMAIN-SUFFIX,addthisedge.com
   - DOMAIN,cdn-msp.msp-comic.xyz
   - DOMAIN,cdn-msp.msp-comic1.xyz
