--- a/R2S/Apple.yaml
+++ b/R2S/Apple.yaml
@@ -1,5 +1,6 @@
 payload:
   - DOMAIN-SUFFIX,aaplimg.com
+  - DOMAIN-SUFFIX,push.apple.com
   - DOMAIN-SUFFIX,Apple.co
   - DOMAIN-SUFFIX,Apple.com
   - DOMAIN-SUFFIX,appstore.com
