--- a/R2S/Apple.yaml
+++ b/R2S/Apple.yaml
@@ -1,10 +1,10 @@
 payload:
   - DOMAIN-SUFFIX,aaplimg.com
   - DOMAIN-SUFFIX,push.apple.com
-  - DOMAIN-SUFFIX,Apple.co
-  - DOMAIN-SUFFIX,Apple.com
+  - DOMAIN-SUFFIX,apple.co
+  - DOMAIN-SUFFIX,apple.com
   - DOMAIN-SUFFIX,appstore.com
-  - DOMAIN-SUFFIX,cdn-Apple.com
+  - DOMAIN-SUFFIX,cdn-apple.com
   - DOMAIN-SUFFIX,crashlytics.com
   - DOMAIN-SUFFIX,icloud.com
   - DOMAIN-SUFFIX,icloud-content.com
