--- a/R2S/ad.yaml
+++ b/R2S/ad.yaml
@@ -1,6 +1,7 @@
 payload:
   - DOMAIN-SUFFIX,qhres.com
   - DOMAIN-SUFFIX,360.cn
+  - DOMAIN-SUFFIX,360cdn.cc
   - DOMAIN-SUFFIX,51.la
   - DOMAIN-SUFFIX,71360.com
   - DOMAIN-SUFFIX,ad7.com
