--- a/R2S/ad.yaml
+++ b/R2S/ad.yaml
@@ -1,81 +1,4 @@
 payload:
-  - IP-CIDR,117.135.145.168/32
-  - IP-CIDR,117.135.145.165/32
-  - IP-CIDR,117.135.145.167/32
-  - IP-CIDR,117.135.145.166/32
-  - IP-CIDR,42.62.94.57/32
-  - DOMAIN-SUFFIX,qhres.com	
-  - DOMAIN-SUFFIX,qihuapi.com	
-  - DOMAIN-SUFFIX,360totalsecurity.com	
-  - DOMAIN-SUFFIX,qihuapi.cn	
-  - DOMAIN-SUFFIX,qhtui.cn	
-  - DOMAIN-SUFFIX,ics-sec.com	
-  - DOMAIN-SUFFIX,qhtui.com	
-  - DOMAIN-SUFFIX,qhres2.com	
-  - DOMAIN-SUFFIX,nelab-bdst.org.cn	
-  - DOMAIN-SUFFIX,syscan360.org
-  - DOMAIN-SUFFIX,qihu.com
-  - DOMAIN-SUFFIX,qhres.com	
-  - DOMAIN-SUFFIX,360wzb.com	
-  - DOMAIN-SUFFIX,360gtm.com	
-  - DOMAIN-SUFFIX,qhimgs.com	   
-  - DOMAIN-SUFFIX,qhimg.com
-  - DOMAIN-SUFFIX,360adlab.com	
-  - DOMAIN-SUFFIX,yunpan.com	
-  - DOMAIN-SUFFIX,dhrest.com	
-  - DOMAIN-SUFFIX,360src.com	
-  - DOMAIN-SUFFIX,kouxin.com	
-  - DOMAIN-SUFFIX,3600.com
-  - DOMAIN-SUFFIX,360.cn
-  - DOMAIN-SUFFIX,360.com
-  - DOMAIN-SUFFIX,360cdn.cc
-  - DOMAIN-SUFFIX,securityinsight.com
-  - DOMAIN-SUFFIX,so.com
-  - DOMAIN-SUFFIX,360sou.com
-  - DOMAIN-SUFFIX,51.la
-  - DOMAIN-SUFFIX,71360.com
-  - DOMAIN-SUFFIX,ad7.com
-  - DOMAIN-SUFFIX,alookbrowser.com
-  - DOMAIN-SUFFIX,doubleclick.net
-  - DOMAIN-SUFFIX,dsp.youdao.com
-  - DOMAIN-SUFFIX,e.qq.com
-  - DOMAIN-SUFFIX,emar.com
-  - DOMAIN-SUFFIX,gdt.qq.com
-  - DOMAIN-SUFFIX,googleadservices.com
-  - DOMAIN-SUFFIX,googleadsserving.cn
-  - DOMAIN-SUFFIX,google-analytics.com
-  - DOMAIN-SUFFIX,googlesyndication.com
-  - DOMAIN-SUFFIX,googletagmanager.com
-  - DOMAIN-SUFFIX,googletagservices.com
-  - DOMAIN-SUFFIX,gozendata.com
-  - DOMAIN-SUFFIX,gzads.com
-  - DOMAIN-SUFFIX,gz-data.com
-  - DOMAIN-SUFFIX,jddebug.com
-  - DOMAIN-SUFFIX,l.qq.com
-  - DOMAIN-SUFFIX,log.byteoversea.com
-  - DOMAIN-SUFFIX,log.tiktokv.com
-  - DOMAIN-SUFFIX,log.umeng.com
-  - DOMAIN-SUFFIX,log-hl-ipv6.snssdk.com
-  - DOMAIN-SUFFIX,log-lq.snssdk.com
-  - DOMAIN-SUFFIX,logs.umeng.com
-  - DOMAIN-SUFFIX,logs.umengcloud.com
-  - DOMAIN-SUFFIX,log-va.tiktokv.com
-  - DOMAIN-SUFFIX,miaozhen.com
-  - DOMAIN-SUFFIX,mob.com
-  - DOMAIN-SUFFIX,onemob.mobi
-  - DOMAIN-SUFFIX,pos.baidu.com
-  - DOMAIN-SUFFIX,reyun.com
-  - DOMAIN-SUFFIX,safebrowsing.googleapis.com
-  - DOMAIN-SUFFIX,safebrowsing.urlsec.qq.com
-  - DOMAIN-SUFFIX,sina.cn
-  - DOMAIN-SUFFIX,tanx.com
-  - DOMAIN-SUFFIX,umeng.com
-  - DOMAIN-SUFFIX,umengcloud.com
-  - DOMAIN-SUFFIX,union.youdao.com
-  - DOMAIN-SUFFIX,www.qchannel01.cn
-  - DOMAIN-SUFFIX,xlog.snssdk.com
-  - DOMAIN-SUFFIX,zgsdk.zhugeio.com
-  - DOMAIN-SUFFIX,zhihuiyun.net.cn
   - DOMAIN,abema-adx.ameba.jp
   - DOMAIN,ad.12306.cn
   - DOMAIN,ad.21cn.com
@@ -89,7 +12,7 @@ payload:
   - DOMAIN,ad.k.21cn.com
   - DOMAIN,ad.wappalyzer.com
   - DOMAIN,ad.yixin.im
-  - DOMAIN,adapi.pandabus.cn
+  - DOMAIN,ad.api.pandabus.cn
   - DOMAIN,ad-cn.jovcloud.com
   - DOMAIN,adextra.51wnl-cq.com
   - DOMAIN,admarket.21cn.com
@@ -117,7 +40,9 @@ payload:
   - DOMAIN,afd.baidu.com
   - DOMAIN,als.baidu.com
   - DOMAIN,analytics.95516.com
+  - DOMAIN,analytics.slashdotmedia.com
   - DOMAIN,api.adnet.mob.com
+  - DOMAIN,api.miwifi.com
   - DOMAIN,api.tuisong.baidu.com
   - DOMAIN,api-ad.kajicam.com
   - DOMAIN,app.smzdm.com
@@ -150,7 +75,12 @@ payload:
   - DOMAIN,impservice.youdao.com
   - DOMAIN,itad.linetv.tw
   - DOMAIN,log.51wnl-cq.com
+  - DOMAIN,log.byteoversea.com
+  - DOMAIN,log.tiktokv.com
   - DOMAIN,log.trackingio.com
+  - DOMAIN,log-hl-ipv6.snssdk.com
+  - DOMAIN,log-lq.snssdk.com
+  - DOMAIN,log-va.tiktokv.com
   - DOMAIN,ma-adx.ctrip.com
   - DOMAIN,mads.suning.com
   - DOMAIN,miao.baidu.com
@@ -180,6 +110,8 @@ payload:
   - DOMAIN,toots-a.akamaihd.net
   - DOMAIN,trace.qq.com
   - DOMAIN,track.58.com
+  - DOMAIN,track.tenjin.com
+  - DOMAIN,track.tenjin.io
   - DOMAIN,track.tiara.daum.net
   - DOMAIN,track.tiara.kakao.com
   - DOMAIN,tracking.intl.miui.com
@@ -196,6 +128,135 @@ payload:
   - DOMAIN,www.nequal.com
   - DOMAIN,wxsnsdy.wxs.qq.com
   - DOMAIN,wxsnsdythumb.wxs.qq.com
+  - DOMAIN,xlog.snssdk.com
   - DOMAIN,yt-adp.nosdn.127.net
   - DOMAIN,yt-adp.ws.126.net
+  - DOMAIN,zgsdk.zhugeio.com
   - DOMAIN,zt.baidu.com
+  - DOMAIN-SUFFIX,360.cn
+  - DOMAIN-SUFFIX,360.com
+  - DOMAIN-SUFFIX,3600.com
+  - DOMAIN-SUFFIX,360adlab.com
+  - DOMAIN-SUFFIX,360cdn.cc
+  - DOMAIN-SUFFIX,360gtm.com
+  - DOMAIN-SUFFIX,360sou.com
+  - DOMAIN-SUFFIX,360src.com
+  - DOMAIN-SUFFIX,360totalsecurity.com
+  - DOMAIN-SUFFIX,360wzb.com
+  - DOMAIN-SUFFIX,51.la
+  - DOMAIN-SUFFIX,71360.com
+  - DOMAIN-SUFFIX,ad7.com
+  - DOMAIN-SUFFIX,adjust.com
+  - DOMAIN-SUFFIX,ads.linkedin.com
+  - DOMAIN-SUFFIX,airpr.com
+  - DOMAIN-SUFFIX,alookbrowser.com
+  - DOMAIN-SUFFIX,cpatrk.net
+  - DOMAIN-SUFFIX,dhrest.com
+  - DOMAIN-SUFFIX,doubleclick.net
+  - DOMAIN-SUFFIX,dsp.youdao.com
+  - DOMAIN-SUFFIX,e.qq.com
+  - DOMAIN-SUFFIX,emar.com
+  - DOMAIN-SUFFIX,gdt.qq.com
+  - DOMAIN-SUFFIX,giocdn.com
+  - DOMAIN-SUFFIX,googleadservices.com
+  - DOMAIN-SUFFIX,googleadsserving.cn
+  - DOMAIN-SUFFIX,google-analytics.com
+  - DOMAIN-SUFFIX,googlesyndication.com
+  - DOMAIN-SUFFIX,googletagmanager.com
+  - DOMAIN-SUFFIX,googletagservices.com
+  - DOMAIN-SUFFIX,gozendata.com
+  - DOMAIN-SUFFIX,growingio.com
+  - DOMAIN-SUFFIX,gzads.com
+  - DOMAIN-SUFFIX,gz-data.com
+  - DOMAIN-SUFFIX,hotjar.com
+  - DOMAIN-SUFFIX,hotjar.io
+  - DOMAIN-SUFFIX,hs-analytics.net
+  - DOMAIN-SUFFIX,ics-sec.com
+  - DOMAIN-SUFFIX,jddebug.com
+  - DOMAIN-SUFFIX,kissmetrics.com
+  - DOMAIN-SUFFIX,kochava.com
+  - DOMAIN-SUFFIX,kouxin.com
+  - DOMAIN-SUFFIX,l.qq.com
+  - DOMAIN-SUFFIX,liadm.com
+  - DOMAIN-SUFFIX,log.byteoversea.com
+  - DOMAIN-SUFFIX,log.tiktokv.com
+  - DOMAIN-SUFFIX,log.umeng.com
+  - DOMAIN-SUFFIX,log-hl-ipv6.snssdk.com
+  - DOMAIN-SUFFIX,log-lq.snssdk.com
+  - DOMAIN-SUFFIX,logs.umeng.com
+  - DOMAIN-SUFFIX,logs.umengcloud.com
+  - DOMAIN-SUFFIX,log-va.tiktokv.com
+  - DOMAIN-SUFFIX,marketo.com
+  - DOMAIN-SUFFIX,miaozhen.com
+  - DOMAIN-SUFFIX,mob.com
+  - DOMAIN-SUFFIX,mobileapptracking.com
+  - DOMAIN-SUFFIX,nelab-bdst.org.cn
+  - DOMAIN-SUFFIX,nr-data.net
+  - DOMAIN-SUFFIX,onemob.mobi
+  - DOMAIN-SUFFIX,pardot.com
+  - DOMAIN-SUFFIX,pos.baidu.com
+  - DOMAIN-SUFFIX,qhimg.com
+  - DOMAIN-SUFFIX,qhimgs.com
+  - DOMAIN-SUFFIX,qhres.com
+  - DOMAIN-SUFFIX,qhres2.com
+  - DOMAIN-SUFFIX,qhtui.cn
+  - DOMAIN-SUFFIX,qhtui.com
+  - DOMAIN-SUFFIX,qihu.com
+  - DOMAIN-SUFFIX,qihuapi.cn
+  - DOMAIN-SUFFIX,qihuapi.com
+  - DOMAIN-SUFFIX,quantserve.com
+  - DOMAIN-SUFFIX,reyun.com
+  - DOMAIN-SUFFIX,rtbasia.com
+  - DOMAIN-SUFFIX,safebrowsing.googleapis.com
+  - DOMAIN-SUFFIX,safebrowsing.urlsec.qq.com
+  - DOMAIN-SUFFIX,scorecardresearch.com
+  - DOMAIN-SUFFIX,securityinsight.com
+  - DOMAIN-SUFFIX,seewhy.com
+  - DOMAIN-SUFFIX,segment.com
+  - DOMAIN-SUFFIX,segment.io
+  - DOMAIN-SUFFIX,segmentify.com
+  - DOMAIN-SUFFIX,sentiance.com
+  - DOMAIN-SUFFIX,serverbid.com
+  - DOMAIN-SUFFIX,sessionm.com
+  - DOMAIN-SUFFIX,sina.cn
+  - DOMAIN-SUFFIX,smartlook.com
+  - DOMAIN-SUFFIX,so.com
+  - DOMAIN-SUFFIX,socdm.com
+  - DOMAIN-SUFFIX,socialannex.com
+  - DOMAIN-SUFFIX,socialbakers.com
+  - DOMAIN-SUFFIX,sociaplus.com
+  - DOMAIN-SUFFIX,stathat.com
+  - DOMAIN-SUFFIX,stats-locations.com
+  - DOMAIN-SUFFIX,syscan360.org
+  - DOMAIN-SUFFIX,tagcommander.com
+  - DOMAIN-SUFFIX,tailtarget.com
+  - DOMAIN-SUFFIX,talkingdata.com
+  - DOMAIN-SUFFIX,talkingdata.net
+  - DOMAIN-SUFFIX,tanx.com
+  - DOMAIN-SUFFIX,tapad.com
+  - DOMAIN-SUFFIX,tapfiliate.com
+  - DOMAIN-SUFFIX,tapinfluence.com
+  - DOMAIN-SUFFIX,tapstream.com
+  - DOMAIN-SUFFIX,tend.io
+  - DOMAIN-SUFFIX,trace.qq.com
+  - DOMAIN-SUFFIX,tracking.miui.com
+  - DOMAIN-SUFFIX,trackingio.com
+  - DOMAIN-SUFFIX,udrig.com
+  - DOMAIN-SUFFIX,umeng.com
+  - DOMAIN-SUFFIX,umengcloud.com
+  - DOMAIN-SUFFIX,union.youdao.com
+  - DOMAIN-SUFFIX,woopra.com
+  - DOMAIN-SUFFIX,wootric.com
+  - DOMAIN-SUFFIX,wowanalytics.co.uk
+  - DOMAIN-SUFFIX,www.qchannel01.cn
+  - DOMAIN-SUFFIX,xlog.snssdk.com
+  - DOMAIN-SUFFIX,yunpan.com
+  - DOMAIN-SUFFIX,zgsdk.zhugeio.com
+  - DOMAIN-SUFFIX,zhihuiyun.net.cn
+  - DOMAIN-SUFFIX,zoomanalytics.co
+  - IP-CIDR,117.135.145.165/32
+  - IP-CIDR,117.135.145.166/32
+  - IP-CIDR,117.135.145.167/32
+  - IP-CIDR,117.135.145.168/32
+  - IP-CIDR,42.62.94.57/32
+  - 
