--- a/line.ini
+++ b/line.ini
@@ -16,7 +16,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`.[]🇺🇲 美国节点
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇺🇲 美国节点
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 全球拦截`select`[]REJECT
