--- a/line.ini
+++ b/line.ini
@@ -5,23 +5,22 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 clash_rule_base=https://raw.githubusercontent.com/olocn/rule/master/clash/ClashConfig.yml
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/olocn/rule/master/clash/system.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/system.list
+ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+#ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/olocn/rule/master/clash/Apple.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/olocn/rule/master/clash/YouTube.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/olocn/rule/master/clash/direct.list
-ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/direct.list
+ruleset=DIRECT,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]🇺🇲 美国节点`[]🚀 节点选择
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连
-custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🛑 全球拦截`select`[]REJECT
-custom_proxy_group=🍃 应用净化`select`[]REJECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT
+#custom_proxy_group=🎯 全球直连`select`[]DIRECT
+#custom_proxy_group=🍃 应用净化`select`[]REJECT
 
 custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
