--- a/clash/ClashConfig.yml
+++ b/clash/ClashConfig.yml
@@ -2,7 +2,7 @@ mixed-port: 7890
 redir-port: 7892
 allow-lan: true
 mode: Rule
-log-level: info
+log-level: warning
 ipv6: false
 hosts:
   services.googleapis.cn: 216.58.200.67
@@ -15,7 +15,7 @@ profile:
   store-fake-ip: true
 dns:
   enable: true
-  listen: 127.0.0.1:53
+  listen: 0.0.0.0:53
   default-nameserver:
     - 223.5.5.5
     - 114.114.114.114
