--- a/clash/ClashConfig.yml
+++ b/clash/ClashConfig.yml
@@ -19,7 +19,7 @@ dns:
   default-nameserver:
     - 223.5.5.5
     - 114.114.114.114
-  ipv6: true
+  ipv6: false
   enhanced-mode: fake-ip
   fake-ip-filter:
     - "*.lan"
