--- a/clash/ClashConfig.yml
+++ b/clash/ClashConfig.yml
@@ -1,14 +1,14 @@
 mixed-port: 7890
 redir-port: 7892
-allow-lan: true
+allow-lan: false
 mode: Rule
 log-level: warning
 ipv6: false
 hosts:
-  services.googleapis.cn: 216.58.200.67
-  www.google.cn: 216.58.200.67
-  mempbtg.uplebz.xyz: 162.14.10.52
-  jdmscys.nzagda.xyz: 162.14.21.69
+  'services.googleapis.cn': 216.58.200.67
+  'www.google.cn': 216.58.200.67
+  'mempbtg.uplebz.xyz': 162.14.10.52
+  'jdmscys.nzagda.xyz': 162.14.21.69
 external-controller: 0.0.0.0:9090
 profile:
   tracing: true
@@ -21,6 +21,7 @@ dns:
     - 114.114.114.114
   ipv6: false
   enhanced-mode: fake-ip
+  fake-ip-range: 198.18.0.1/16
   fake-ip-filter:
     - "*.lan"
     - stun.*.*.*
