--- a/clash/ClashConfig.yml
+++ b/clash/ClashConfig.yml
@@ -99,10 +99,10 @@ dns:
     - 114.114.114.114
     - 223.5.5.5
     - 119.29.29.29
-  fallback:
+  #fallback:
     - 8.8.8.8
     - 8.8.4.4
-  fallback-filter:
+  #fallback-filter:
     geoip: false
     ipcidr:
       - 240.0.0.0/4
