--- a/clash/ClashConfig.yml
+++ b/clash/ClashConfig.yml
@@ -99,11 +99,11 @@ dns:
     - 114.114.114.114
     - 223.5.5.5
     - 119.29.29.29
-  #fallback:
+  fallback:
     - 8.8.8.8
     - 8.8.4.4
-  #fallback-filter:
-    geoip: false
+  fallback-filter:
+    geoip: true
     ipcidr:
       - 240.0.0.0/4
       - 0.0.0.0/32
