--- a/line.ini
+++ b/line.ini
@@ -8,23 +8,23 @@ clash_rule_base=https://raw.githubusercontent.com/olocn/rule/master/clash/ClashC
 ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/system.list
 ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/clash/Privacy.list
 #ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/olocn/rule/master/clash/proxy.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/olocn/rule/master/clash/YouTube.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/olocn/rule/master/clash/Apple.list
+ruleset=🚀,https://raw.githubusercontent.com/olocn/rule/master/clash/proxy.list
+ruleset=🎬,https://raw.githubusercontent.com/olocn/rule/master/clash/YouTube.list
+ruleset=🍎,https://raw.githubusercontent.com/olocn/rule/master/clash/Apple.list
 ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/direct.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🚀 节点选择
-custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT
-#custom_proxy_group=🎯 全球直连`select`[]DIRECT
-#custom_proxy_group=🍃 应用净化`select`[]REJECT
+custom_proxy_group=🚀`select`[]🇭🇰`[]🇨🇳`[]🇸🇬`[]🇺🇲`[]DIRECT
+custom_proxy_group=🎬`select`[]🇺🇲`[]🇸🇬`[]🚀
+custom_proxy_group=🍎`select`[]🚀`[]DIRECT
+custom_proxy_group=🐟`select`[]🚀`[]DIRECT
+#custom_proxy_group=🎯`select`[]DIRECT
+#custom_proxy_group=🍃`select`[]REJECT
 
-custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)
-custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
-custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
-custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=🇨🇳`select`(台|新北|彰化|TW|Taiwan)
+custom_proxy_group=🇭🇰`select`(港|HK|Hong Kong)
+custom_proxy_group=🇺🇲`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+custom_proxy_group=🇸🇬`select`(新加坡|坡|狮城|SG|Singapore)
 
 
