--- a/line.ini
+++ b/line.ini
@@ -13,7 +13,7 @@ ruleset=🎬,https://raw.githubusercontent.com/olocn/rule/master/clash/YouTube.l
 ruleset=🍎,https://raw.githubusercontent.com/olocn/rule/master/clash/Apple.list
 ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/direct.list
 ruleset=DIRECT,[]GEOIP,CN
-ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=🐟,[]FINAL
 
 custom_proxy_group=🚀`select`[]🇭🇰`[]🇨🇳`[]🇸🇬`[]🇺🇲`[]DIRECT
 custom_proxy_group=🎬`select`[]🇺🇲`[]🇸🇬`[]🚀
