--- a/line.ini
+++ b/line.ini
@@ -12,6 +12,7 @@ ruleset=🚀,https://raw.githubusercontent.com/olocn/rule/master/clash/proxy.lis
 ruleset=🎬,https://raw.githubusercontent.com/olocn/rule/master/clash/YouTube.list
 ruleset=🍎,https://raw.githubusercontent.com/olocn/rule/master/clash/Apple.list
 ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/direct.list
+ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/clash/hh.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=🐟,[]FINAL
 
