--- a/clash/ClashConfig.yml
+++ b/clash/ClashConfig.yml
@@ -7,8 +7,8 @@ ipv6: false
 hosts:
   'services.googleapis.cn': 216.58.200.67
   'www.google.cn': 216.58.200.67
-  #'mempbtg.uplebz.xyz': 162.14.10.52
-  #'jdmscys.nzagda.xyz': 162.14.21.69
+  'mempbtg.uplebz.xyz': 162.14.10.52
+  'jdmscys.nzagda.xyz': 162.14.21.69
 external-controller: 0.0.0.0:9090
 profile:
   tracing: true
@@ -53,6 +53,7 @@ dns:
     - time6.aliyun.com
     - time7.aliyun.com
     - "*.time.edu.cn"
+    - time.apple.com
     - time1.apple.com
     - time2.apple.com
     - time3.apple.com
