--- a/clash/ClashConfig.yml
+++ b/clash/ClashConfig.yml
@@ -11,17 +11,19 @@ hosts:
   'jdmscys.nzagda.xyz': 162.14.21.69
 external-controller: 0.0.0.0:9090
 profile:
+  store-selected: true
   tracing: true
   store-fake-ip: true
 dns:
   enable: true
   listen: 0.0.0.0:53
   default-nameserver:
-    - 223.5.5.5
     - 114.114.114.114
+    - 8.8.8.8
   ipv6: false
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
+  use-hosts: true
   fake-ip-filter:
     - "*.lan"
     - stun.*.*.*
@@ -98,16 +100,15 @@ dns:
     - speedtest.cros.wr.pvp.net
   nameserver:
     - 114.114.114.114
-    - 223.5.5.5
-    - 119.29.29.29
+    - https://223.5.5.5/dns-query
+    - https://doh.pub/dns-query
   fallback:
-    - 8.8.8.8
-    - 8.8.4.4
+    - https://dns.google/dns-query
+    - https://dns.cloudflare.com/dns-query
   fallback-filter:
     geoip: true
     ipcidr:
       - 240.0.0.0/4
-      - 0.0.0.0/32
     domain:
       - +.google.com
       - +.facebook.com
