--- a/clash/ClashConfig.yml
+++ b/clash/ClashConfig.yml
@@ -105,8 +105,8 @@ dns:
     - https://223.5.5.5/dns-query
     - https://doh.pub/dns-query
   fallback:
-    - https://dns.google/dns-query
-    - 8.8.8.8
+    - tcp://8.8.8.8:53
+    - tcp://8.8.4.4:53
   fallback-filter:
     geoip: true
     ipcidr:
