--- a/clash/ClashConfig.yml
+++ b/clash/ClashConfig.yml
@@ -20,11 +20,6 @@ dns:
   default-nameserver:
     - 114.114.114.114
     - 8.8.8.8
-  hosts:
-   'services.googleapis.cn': 216.58.200.67
-   'www.google.cn': 216.58.200.67
-   'mempbtg.uplebz.xyz': 162.14.10.52
-   'jdmscys.nzagda.xyz': 162.14.21.69
   ipv6: false
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
@@ -109,3 +104,21 @@ dns:
     - 114.114.114.114
     - 223.5.5.5
     - 119.29.29.29
+  fallback:
+    - 8.8.8.8
+    - 8.8.4.4
+  fallback-filter:
+    geoip: true
+    ipcidr:
+      - 240.0.0.0/4
+      - 0.0.0.0/32
+    domain:
+      - +.google.com
+      - +.facebook.com
+      - +.twitter.com
+      - +.youtube.com
+      - +.xn--ngstr-lra8j.com
+      - +.google.cn
+      - +.googleapis.cn
+      - +.googleapis.com
+      - +.gvt1.com
