--- a/clash/proxy.yaml
+++ b/clash/proxy.yaml
@@ -8,6 +8,9 @@ payload:
   - DOMAIN-SUFFIX,ea.com
   - DOMAIN-SUFFIX,typography.com
   - DOMAIN-SUFFIX,push.apple.com
+ #everdale
+  - DOMAIN-SUFFIX,everdalegame.com
+  - DOMAIN,supercell.helpshift.com
 # 无忧行
   - DOMAIN-SUFFIX,awsglobalaccelerator.com
 # wechat
