--- a/line.ini
+++ b/line.ini
@@ -16,7 +16,7 @@ ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/clash/hh.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=🐟,[]FINAL
 
-custom_proxy_group=🚀`select`[]🇭🇰`[]🇨🇳`[]🇸🇬`[]🇺🇲`[]DIRECT
+custom_proxy_group=🚀`select`[]🇭🇰`[]🇨🇳`[]🇸🇬`[]🇺🇲`[]🇰🇷`[]DIRECT
 custom_proxy_group=🎬`select`[]🇺🇲`[]🇸🇬`[]🚀
 custom_proxy_group=🍎`select`[]🚀`[]DIRECT
 custom_proxy_group=🐟`select`[]🚀`[]DIRECT
@@ -27,5 +27,5 @@ custom_proxy_group=🇨🇳`select`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=🇭🇰`select`(港|HK|Hong Kong)
 custom_proxy_group=🇺🇲`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 custom_proxy_group=🇸🇬`select`(新加坡|坡|狮城|SG|Singapore)
-
+custom_proxy_group=🇰🇷`select`(KR|Korea|KOR|首尔|韩|韓)
 
