--- a/line.ini
+++ b/line.ini
@@ -18,7 +18,7 @@ ruleset=🐟,[]FINAL
 
 custom_proxy_group=🚀`select`[]🇭🇰`[]🇨🇳`[]🇸🇬`[]🇺🇲`[]🇰🇷`[]DIRECT
 custom_proxy_group=🎬`select`[]🇺🇲`[]🇸🇬`[]🚀
-custom_proxy_group=🍎`select`[]🚀`[]DIRECT
+custom_proxy_group=🍎`select`[]DIRECT`[]🚀
 custom_proxy_group=🐟`select`[]🚀`[]DIRECT
 #custom_proxy_group=🎯`select`[]DIRECT
 #custom_proxy_group=🍃`select`[]REJECT
