--- a/clash/ClashConfig.yml
+++ b/clash/ClashConfig.yml
@@ -16,6 +16,7 @@ profile:
   store-fake-ip: true
 dns:
   enable: true
+  listen: 0.0.0.0:53
   default-nameserver:
     - 114.114.114.114
     - 223.5.5.5
@@ -125,17 +126,27 @@ dns:
     - 8.8.8.8
     - 8.8.4.4
   fallback-filter:
-    geoip: true
+    geoip: false
     ipcidr:
+      - 0.0.0.0/8
+      - 10.0.0.0/8
+      - 100.64.0.0/10
+      - 127.0.0.0/8
+      - 169.254.0.0/16
+      - 172.16.0.0/12
+      - 192.0.0.0/24
+      - 192.0.2.0/24
+      - 192.88.99.0/24
+      - 192.168.0.0/16
+      - 198.18.0.0/15
+      - 198.51.100.0/24
+      - 203.0.113.0/24
+      - 224.0.0.0/4
       - 240.0.0.0/4
-      - 0.0.0.0/32
+      - 255.255.255.255/32
     domain:
-      - +.google.com
-      - +.facebook.com
-      - +.twitter.com
-      - +.youtube.com
-      - +.xn--ngstr-lra8j.com
-      - +.google.cn
-      - +.googleapis.cn
-      - +.googleapis.com
-      - +.gvt1.com
+      - '+.google.com'
+      - '+.facebook.com'
+      - '+.youtube.com'
+      - '+.githubusercontent.com'
+      - '+.googlevideo.com'
