--- a/line.ini
+++ b/line.ini
@@ -7,10 +7,10 @@ overwrite_original_rules=true
 clash_rule_base=https://raw.githubusercontent.com/olocn/rule/master/clash/ClashConfig.yml
 ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/system.list
 ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/clash/Privacy.list
-#ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🚀,https://raw.githubusercontent.com/olocn/rule/master/clash/proxy.list
 ruleset=🎬,https://raw.githubusercontent.com/olocn/rule/master/clash/YouTube.list
 ruleset=🍎,https://raw.githubusercontent.com/olocn/rule/master/clash/Apple.list
+ruleset=🍃,https://raw.githubusercontent.com/olocn/rule/master/clash/wechat.list
 ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/direct.list
 ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/clash/hh.list
 ruleset=DIRECT,[]GEOIP,CN
@@ -19,12 +19,11 @@ ruleset=🐟,[]FINAL
 custom_proxy_group=🚀`select`[]🇭🇰`[]🇨🇳`[]🇸🇬`[]🇺🇲`[]🇰🇷`[]DIRECT
 custom_proxy_group=🎬`select`[]🇺🇲`[]🇸🇬`[]🚀
 custom_proxy_group=🍎`select`[]DIRECT`[]🚀
+custom_proxy_group=🍃`select`[]DIRECT`[]🚀
 custom_proxy_group=🐟`select`[]🚀`[]DIRECT
-#custom_proxy_group=🎯`select`[]DIRECT
-#custom_proxy_group=🍃`select`[]REJECT
 
 custom_proxy_group=🇨🇳`select`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=🇭🇰`select`(港|HK|Hong Kong)
 custom_proxy_group=🇺🇲`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 custom_proxy_group=🇸🇬`select`(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=🇰🇷`select`(KR|Korea|KOR|首尔|韩|韓)
+custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
