--- a/line.ini
+++ b/line.ini
@@ -16,7 +16,7 @@ ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/clash/hh.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=🐟,[]FINAL
 
-custom_proxy_group=🚀`select`[]🇭🇰`[]🇨🇳`[]🇸🇬`[]🇺🇲`[]🇰🇷`[]DIRECT
+custom_proxy_group=🚀`select`[]🇭🇰`[]🇨🇳`[]🇸🇬`[]🇺🇲`[]DIRECT
 custom_proxy_group=🎬`select`[]🇺🇲`[]🇸🇬`[]🚀
 custom_proxy_group=🍎`select`[]DIRECT`[]🚀
 custom_proxy_group=🍃`select`[]DIRECT`[]🚀
