--- a/quan/O.conf
+++ b/quan/O.conf
@@ -207,3 +207,39 @@ ip-cidr, 224.0.0.0/4, direct
 ip6-cidr, fe80::/10, direct
 
 final, Final
+#
+[task_local]
+;* * * * * sample-task.js
+;* * * * * sample-task2.js, img-url=https://raw.githubusercontent.com/crossutility/Quantumult-X/master/quantumult-x.png, tag=Sample, enabled=true
+;event-network sample-task3.js
+;event-interaction sample-task4.js
+
+
+#
+# Deploy a local HTTP server and use JavaScript for data processing.
+# The input variables are $reqeust.url, $reqeust.path, $reqeust.headers, $reqeust.body
+# The output using $done like $done({status:"HTTP/1.1 200 OK"}, headers:{}, body:"here is a string") to sendback the response.
+# Further more you can use a signature or any other validation method to verify if the request is legitimate.
+# After the deployment you should visit it through http://127.0.0.1:9999/your-path/your-api/.
+#
+[http_backend]
+;https://raw.githubusercontent.com/crossutility/Quantumult-X/master/sample-backend.js, tag=fileConverter, path=^/example/v1/
+;preference.js, tag=userPreference, path=^/preference/v1/, img-url=https://example.com, enabled=true
+;convert.js, tag=fileConverter, path=^/convert/v1/
+
+
+#
+# Only the TLS SNI or destination address in "hostname" will be handled by MitM.
+#
+# By default when MitM enabled for the HTTPS request, Quantumult X fetches the certificate(the certificate will be cached) from the original site, keeps most of the needed original certificate informations and re-signs it using the MitM root CA, this is the recommended(and more compatible) way of creating MitM certificate.
+# Occasionally some users like to debug the HTTPS request that its domain does not exist, so the original certificate doesn't even exist. This is when the param simple_cert_hostname comes up. The HTTPS request with TLS SNI names that are in the simple_cert_hostname(and hostname) will using the pure local generated MitM  certificate.
+#
+# Important !!! You should always keep your CA passphrase and p12 private.
+#
+[mitm]
+;passphrase =
+;p12 =
+;skip_validating_cert = false
+;force_sni_domain_name = false
+;hostname = *.example.com, *.sample.com, non-existed-domain.com, *.non-connected-domain.com
+;simple_cert_hostname = non-existed-domain.com, *.non-connected-domain.com
