--- a/quan/O.conf
+++ b/quan/O.conf
@@ -214,7 +214,7 @@ final, Final
 ;event-network sample-task3.js
 ;event-interaction sample-task4.js
 
-
+[rewrite_local]
 #
 # Deploy a local HTTP server and use JavaScript for data processing.
 # The input variables are $reqeust.url, $reqeust.path, $reqeust.headers, $reqeust.body
