--- a/clash/ClashConfig.yml
+++ b/clash/ClashConfig.yml
@@ -5,10 +5,11 @@ mode: Rule
 log-level: warning
 ipv6: false
 hosts:
-  'services.googleapis.cn': 216.58.200.67
-  'www.google.cn': 216.58.200.67
+  'mtalk.google.com': 108.177.125.188
+  'jdmscys.nzagda.xyz': 211.99.115.57
+  'zsiwlmc.uplebz.xyz': 42.157.161.14
+  'dob6xwc.tjyoqr.xyz': 124.71.2.4
   'mempbtg.uplebz.xyz': 42.157.161.3
-  'jdmscys.nzagda.xyz': 122.9.121.191
 external-controller: 0.0.0.0:9090
 profile:
   store-selected: true
@@ -24,9 +25,6 @@ dns:
   fake-ip-range: 198.18.0.1/16
   use-hosts: true
   fake-ip-filter:
-    - mempbtg.uplebz.xyz
-    - jdmscys.nzagda.xyz
-    - olocn.fun
     - "*.lan"
     - "*.localdomain"
     - "*.example"
@@ -124,6 +122,7 @@ dns:
   fallback:
     - 8.8.8.8
     - 8.8.4.4
+    - tls://8.8.4.4
   fallback-filter:
     geoip: false
     ipcidr:
