--- a/line.ini
+++ b/line.ini
@@ -5,8 +5,8 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 clash_rule_base=https://raw.githubusercontent.com/olocn/rule/master/clash/ClashConfig.yml
-ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/system.list
-ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/clash/Privacy.list
+#ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/system.list
+#ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/clash/Privacy.list
 ruleset=🚀,https://raw.githubusercontent.com/olocn/rule/master/clash/proxy.list
 ruleset=🎬,https://raw.githubusercontent.com/olocn/rule/master/clash/YouTube.list
 ruleset=🍎,https://raw.githubusercontent.com/olocn/rule/master/clash/Apple.list
