--- a/line.ini
+++ b/line.ini
@@ -7,18 +7,18 @@ overwrite_original_rules=true
 clash_rule_base=https://raw.githubusercontent.com/olocn/rule/master/clash/ClashConfig.yml
 #ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/system.list
 #ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/clash/Privacy.list
-ruleset=🚀,https://raw.githubusercontent.com/olocn/rule/master/clash/proxy.list
 ruleset=🎬,https://raw.githubusercontent.com/olocn/rule/master/clash/YouTube.list
 ruleset=🍎,https://raw.githubusercontent.com/olocn/rule/master/clash/Apple.list
 ruleset=🍃,https://raw.githubusercontent.com/olocn/rule/master/clash/wechat.list
-#ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/direct.list
+ruleset=🚀,https://raw.githubusercontent.com/olocn/rule/master/clash/proxy.list
+ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/direct.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=🐟,[]FINAL
 
-custom_proxy_group=🚀`select`[]🇭🇰`[]🇨🇳`[]🇸🇬`[]🇺🇲`[]DIRECT
 custom_proxy_group=🎬`select`[]🇺🇲`[]🇸🇬`[]🚀
 custom_proxy_group=🍎`select`[]DIRECT`[]🚀
 custom_proxy_group=🍃`select`[]DIRECT`[]🚀
+custom_proxy_group=🚀`select`[]🇭🇰`[]🇨🇳`[]🇸🇬`[]🇺🇲`[]DIRECT
 custom_proxy_group=🐟`select`[]🚀`[]DIRECT
 
 custom_proxy_group=🇨🇳`select`(台|新北|彰化|TW|Taiwan)
