--- a/line.ini
+++ b/line.ini
@@ -8,10 +8,10 @@ clash_rule_base=https://raw.githubusercontent.com/olocn/rule/master/clash/ClashC
 ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/system.list
 ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/clash/Privacy.list
 ruleset=🎬,https://raw.githubusercontent.com/olocn/rule/master/clash/YouTube.list
-ruleset=🍎,https://raw.githubusercontent.com/olocn/rule/master/clash/Apple.list
+ruleset=🍎,https://raw.githubusercontent.com/olocn/rule/master/surge/apple.txt
 ruleset=🍃,https://raw.githubusercontent.com/olocn/rule/master/clash/wechat.list
-ruleset=🚀,https://raw.githubusercontent.com/olocn/rule/master/clash/proxy.list
-ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/direct.list
+ruleset=🚀,https://raw.githubusercontent.com/olocn/rule/master/surge/proxy.txt
+ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/surge/direct.txt
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=🐟,[]FINAL
 
