--- a/line.ini
+++ b/line.ini
@@ -7,7 +7,7 @@ overwrite_original_rules=true
 clash_rule_base=https://raw.githubusercontent.com/olocn/rule/master/clash/ClashConfig.yml
 ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/clash/system.list
 ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/clash/Privacy.list
-ruleset=🎬,https://raw.githubusercontent.com/olocn/rule/master/clash/YouTube.list
+ruleset=🎬,https://raw.githubusercontent.com/olocn/rule/master/surge/YT.txt
 ruleset=🍎,https://raw.githubusercontent.com/olocn/rule/master/surge/apple.txt
 ruleset=🍃,https://raw.githubusercontent.com/olocn/rule/master/clash/wechat.list
 ruleset=🚀,https://raw.githubusercontent.com/olocn/rule/master/surge/proxy.txt
