--- a/line.ini
+++ b/line.ini
@@ -4,15 +4,15 @@
 enable_rule_generator=true
 overwrite_original_rules=true
 
-clash_rule_base=https://raw.githubusercontent.com/olocn/rule/master/clash/ClashConfig.yml
+clash_rule_base=https://raw.githubusercontent.com/olocn/rule/master/ClashConfig.yml
 ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/surge/system.txt
 ruleset=REJECT,https://raw.githubusercontent.com/olocn/rule/master/surge/Privacy.txt
 ruleset=🎬,https://raw.githubusercontent.com/olocn/rule/master/surge/YT.txt
 ruleset=🍎,https://raw.githubusercontent.com/olocn/rule/master/surge/apple.txt
-ruleset=🍃,https://raw.githubusercontent.com/olocn/rule/master/clash/wechat.list
+ruleset=🍃,https://raw.githubusercontent.com/olocn/rule/master/surge/wechat.txt
 ruleset=🚀,https://raw.githubusercontent.com/olocn/rule/master/surge/proxy.txt
 ruleset=DIRECT,https://raw.githubusercontent.com/olocn/rule/master/surge/direct.txt
-ruleset=DIRECT,[]GEOIP,CN
+#ruleset=DIRECT,[]GEOIP,CN
 ruleset=🐟,[]FINAL
 
 custom_proxy_group=🎬`select`[]🇺🇲`[]🇸🇬`[]🚀
