--- a/s/proxy.yaml
+++ b/s/proxy.yaml
@@ -19,6 +19,8 @@ payload:
   - '+.googleusercontent.com'
   - '+.bbci.co.uk'
   - '+.addthisedge.com'
+  - '+.iili.io'
+  - '+.imgbox.com'
   - '+.jkforum.net'
   - '+.playno1.com'
   - '+.sexyno1.com'
