--- a/s/proxy.yaml
+++ b/s/proxy.yaml
@@ -1,5 +1,10 @@
 payload:
   - '+.jsdelivr.net'
+  - '+.chkaja.com'
+  - '+.picgo.net'
+  - '+.pterclub.com'
+  - '+.sda1.dev'
+  - '+.endpot.com'
   - '+.18comic.vip'
   - '+.18comic.org'
   - '+.addthis.com'
