--- a/s/Privacy.yaml
+++ b/s/Privacy.yaml
@@ -1,4 +1,14 @@
 payload:
+  - '+.eloqua-tracking.unity3d.com'
+  - '+.eloqua-trackings.unity3d.com'
+  - '+.perf-events.cloud.unity3d.com'
+  - '+.unityads.unity3d.com'
+  - '+.cdp.cloud.unity3d.com'
+  - '+.data-optout-service.uca.cloud.unity3d.com'
+  - '+.thind-gke-euw.prd.data.corp.unity3d.com'
+  - '+.analytics.tresensa.com'
+  - '+.appsflyer.com'
+  - '+.vungle.com'
   - '+.51.la'
   - '+.ad.intl.xiaomi.com'
   - 'trackingprd.hwwt8.com'
