--- a/s/proxy.yaml
+++ b/s/proxy.yaml
@@ -1,51 +1,17 @@
 payload:
   - '+.bb8gk.com'
-  - '+.gitbook.com'
-  - '+.netcdn.space'
-  - '+.blogspot.com'
-  - '+.jsdelivr.net'
-  - '+.chkaja.com'
-  - '+.picgo.net'
-  - '+.pterclub.com'
-  - '+.sda1.dev'
-  - '+.endpot.com'
-  - '+.18comic.vip'
   - '+.18comic.org'
-  - '+.addthis.com'
-  - '+.pixhost.to'
-  - '+.m-team.cc'
-  - '+.masiro.me'
-  - '+.javdb006.com'
-  - '+.dmm.co.jp'
-  - '+.ibb.co'
-  - '+.btsow.beauty'
-  - '+.blogjav.net'
-  - '+.javstore.net'
-  - '+.sub.nexconvert.com'
-  - '+.cacerts.digitalcertvalidation.com'
-  - '+.cacerts.digicert.com'
-  - '+.githubassets.com'
-  - '+.googleusercontent.com'
-  - '+.bbci.co.uk'
-  - '+.addthisedge.com'
-  - '+.iili.io'
-  - '+.imgbox.com'
-  - '+.jkforum.net'
-  - '+.playno1.com'
-  - '+.sexyno1.com'
-  - '+.playio1.com'
-  - '+.youtube.com'
-  - '+.googlevideo.com'
-  - '+.github.io'
-  - '+.greencloudvps.com'
-  - '+.tawk.to'
-  - '+.weserv.nl'
+  - '+.18comic.vip'
   - '+.1drv.com'
   - '+.9cache.com'
   - '+.9gag.com'
+  - '+.a248.e.akamai.net'
+  - '+.a771.dscq.akamai.net'
   - '+.abc.com'
   - '+.abc.xyz'
   - '+.accountkit.com'
+  - '+.addthis.com'
+  - '+.addthisedge.com'
   - '+.admob.com'
   - '+.adsense.com'
   - '+.advertisercommunity.com'
@@ -54,8 +20,6 @@ payload:
   - '+.aikonhey.com'
   - '+.aimoon.com'
   - '+.aka.ms'
-  - '+.a248.e.akamai.net'
-  - '+.a771.dscq.akamai.net'
   - '+.amazon.co.jp'
   - '+.amplitude.com'
   - '+.ampproject.org'
@@ -81,7 +45,9 @@ payload:
   - '+.axios.com'
   - '+.bandcamp.com'
   - '+.bandwagonhost.com'
+  - '+.bb8gk.com'
   - '+.bbc.com'
+  - '+.bbci.co.uk'
   - '+.behance.net'
   - '+.bibox.com'
   - '+.binance.cc'
@@ -100,6 +66,7 @@ payload:
   - '+.blogger.com'
   - '+.blogjav.net'
   - '+.bloglovin.com'
+  - '+.blogspot.com'
   - '+.bloomberg.cn'
   - '+.bloomberg.com'
   - '+.bloomberg.de'
@@ -109,23 +76,27 @@ payload:
   - '+.branch.io'
   - '+.brave.com'
   - '+.btdig.com'
+  - '+.btsow.beauty'
   - '+.btsow.rest'
   - '+.bullguard.com'
   - '+.bybit.com'
   - '+.byzhihuo.com'
+  - '+.cacerts.digicert.com'
+  - '+.cacerts.digitalcertvalidation.com'
   - '+.castbox.fm'
   - '+.cdninstagram.com'
   - '+.change.org'
+  - '+.chkaja.com'
   - '+.chrome.com'
   - '+.chromium.org'
   - '+.cloudcone.com'
+  - '+.cloudflare.com'
   - '+.clubhouseapi.com'
   - '+.clyp.it'
   - '+.cna.com.tw'
   - '+.coinbase.com'
   - '+.coincheck.com'
   - '+.coingecko.com'
-  - '+.cloudflare.com'
   - '+.coinmarketcap.com'
   - '+.coinone.co.kr'
   - '+.conoha.jp'
@@ -156,12 +127,14 @@ payload:
   - '+.economist.com'
   - '+.edx-cdn.org'
   - '+.encyclopedia.com'
+  - '+.endpot.com'
   - '+.engadget.com'
   - '+.enpass.io'
   - '+.etherscan.io'
   - '+.everdalegame.com'
   - '+.f8.com'
   - '+.facebookmail.com'
+  - '+.fastly.net'
   - '+.fb.com'
   - '+.fb.me'
   - '+.fb.watch'
@@ -191,12 +164,14 @@ payload:
   - '+.gfw.report'
   - '+.ggpht.com'
   - '+.git.io'
+  - '+.gitbook.com'
   - '+.githack.com'
   - '+.github.blog'
   - '+.github.com'
   - '+.github.io'
   - '+.githubassets.com'
   - '+.githubusercontent.com'
+  - '+.gitlab.io'
   - '+.gmail.com'
   - '+.gmodules.com'
   - '+.go.dev'
@@ -204,9 +179,12 @@ payload:
   - '+.google.com'
   - '+.google.com.tw'
   - '+.googleapis.com'
+  - '+.googleusercontent.com'
+  - '+.googlevideo.com'
   - '+.graph.org'
   - '+.graphql.org'
   - '+.gravatar.com'
+  - '+.greencloudvps.com'
   - '+.gstatic.com'
   - '+.gvt0.com'
   - '+.gvt1.com'
@@ -218,9 +196,12 @@ payload:
   - '+.hotmail.com'
   - '+.huffpost.com'
   - '+.huobi.com'
+  - '+.ibb.co'
   - '+.i-cable.com'
   - '+.ifixit.com'
+  - '+.iili.io'
   - '+.imagetwist.com'
+  - '+.imgbox.com'
   - '+.imgur.com'
   - '+.independent.co.uk'
   - '+.inoreader.com'
@@ -237,10 +218,14 @@ payload:
   - '+.javbus.com'
   - '+.javbus22.com'
   - '+.javcdn.cc'
+  - '+.javdb006.com'
   - '+.javlibrary.com'
+  - '+.javstore.net'
+  - '+.jkforum.net'
   - '+.joinclubhouse.com'
   - '+.jpfunny.org'
   - '+.jpmediadl.com'
+  - '+.jsdelivr.net'
   - '+.justpaste.it'
   - '+.kakao.com'
   - '+.kobo.com'
@@ -248,6 +233,8 @@ payload:
   - '+.korbit.co.kr'
   - '+.kraken.com'
   - '+.kucoin.com'
+  - '+.kuromis.com'
+  - '+.kuromisubs.shop'
   - '+.legra.ph'
   - '+.licdn.com'
   - '+.linkedin.com'
@@ -258,10 +245,11 @@ payload:
   - '+.loggly.com'
   - '+.lowendtalk.com'
   - '+.m.me'
-  - '+.me.com'
   - '+.mailchimp.com'
   - '+.manhuagui.com'
+  - '+.masiro.me'
   - '+.matrix.org'
+  - '+.me.com'
   - '+.mediawiki.org'
   - '+.medibang.com'
   - '+.medium.com'
@@ -273,6 +261,7 @@ payload:
   - '+.mixlr.com'
   - '+.moon.fm'
   - '+.msn.com'
+  - '+.m-team.cc'
   - '+.mubi.com'
   - '+.mypikpak.com'
   - '+.myspace.com'
@@ -282,6 +271,7 @@ payload:
   - '+.naver.jp'
   - '+.nbcnews.com'
   - '+.neowin.net'
+  - '+.netcdn.space'
   - '+.newsblur.com'
   - '+.newstatesman.com'
   - '+.newsweek.com'
@@ -289,10 +279,10 @@ payload:
   - '+.newyorktimes.com'
   - '+.nexitally.com'
   - '+.nhentai.net'
-  - '+.splunkcloud.com'
   - '+.notion.so'
   - '+.notion-static.com'
   - '+.now.com'
+  - '+.nssurge.com'
   - '+.nyt.com'
   - '+.nytco.com'
   - '+.nytimes.com'
@@ -319,6 +309,7 @@ payload:
   - '+.periscope.tv'
   - '+.phncdn.com'
   - '+.photos18.com'
+  - '+.picgo.net'
   - '+.pimg.tw'
   - '+.pinimg.com'
   - '+.pixhost.to'
@@ -326,12 +317,15 @@ payload:
   - '+.pixiv.net'
   - '+.pixiv.org'
   - '+.player.fm'
+  - '+.playio1.com'
+  - '+.playno1.com'
   - '+.podbean.com'
   - '+.poloniex.com'
   - '+.prism-break.org'
   - '+.privoxy.org'
   - '+.proxifier.com'
   - '+.pscp.tv'
+  - '+.pterclub.com'
   - '+.pttime.org'
   - '+.pximg.net'
   - '+.quora.com'
@@ -356,11 +350,14 @@ payload:
   - '+.schema.org'
   - '+.scmp.com'
   - '+.scribd.com'
+  - '+.sda1.dev'
   - '+.seamless.icu'
   - '+.search.com'
   - '+.segment.com'
+  - '+.sehuatang.net'
   - '+.sehuatang.org'
   - '+.sentry.io'
+  - '+.sexyno1.com'
   - '+.shutterstock.com'
   - '+.signal.org'
   - '+.sketchappsources.com'
@@ -370,9 +367,11 @@ payload:
   - '+.smh.com.au'
   - '+.smoot.apple.com '
   - '+.snapgram.co'
+  - '+.south-plus.net'
   - '+.speakerdeck.com'
   - '+.spideroak.com'
   - '+.spiegel.de'
+  - '+.splunkcloud.com'
   - '+.startpage.com'
   - '+.static-economist.com'
   - '+.steamcommunity.com'
@@ -380,15 +379,15 @@ payload:
   - '+.straitstimes.com'
   - '+.streamable.com'
   - '+.streaming.mediaservices.windows.net'
+  - '+.sub.nexconvert.com'
   - '+.substack.com'
   - '+.sushi.com'
-  - '+.south-plus.net'
-  - '+.nssurge.com'
   - '+.svc.ms'
   - '+.swissinfo.ch'
   - '+.t.co'
   - '+.t.me'
   - '+.tapatalk.com'
+  - '+.tawk.to'
   - '+.tdesktop.com'
   - '+.techspot.com'
   - '+.telegra.ph'
@@ -448,6 +447,7 @@ payload:
   - '+.webmproject.org'
   - '+.webrtc.org'
   - '+.welt.de'
+  - '+.weserv.nl'
   - '+.whatsapp.com'
   - '+.whatsapp.net'
   - '+.whoer.net'
@@ -481,6 +481,7 @@ payload:
   - '+.yande.re'
   - '+.yandex.ru'
   - '+.you-get.org'
+  - '+.youtube.com'
   - '+.ytimg.com'
   - '+.zaobao.com'
   - '+.zaobao.com.sg'
@@ -491,8 +492,6 @@ payload:
   - '+.zophar.net'
   - '+.zynamics.com'
   - '+.zyxel.com'
-  - '+.kuromisubs.shop'
-  - '+.kuromis.com'
   - 'addons.mozilla.org'
   - 'amp-api.podcasts.apple.com'
   - 'apple.comscoreresearch.com'
@@ -505,9 +504,6 @@ payload:
   - 'clubhouse.pubnubapi.com'
   - 'd3c33hcgiwev3.cloudfront.net'
   - 'gateway.icloud.com'
-  - '+.fastly.net'
-  - '+.gitlab.io'
-  - '+.github.io'
   - 'graph.microsoft.com'
   - 'lab.skk.moe'
   - 'lookup-api.apple.com '
@@ -518,6 +514,7 @@ payload:
   - 'news-events.apple.com'
   - 'ocsp.int-x3.letsencrypt.org'
   - 'payments-jp.amazon.com'
+  - 'pixiv.rsshub.app'
   - 'ppq.apple.com'
   - 's3-ap-northeast-1.amazonaws.com'
   - 's3-ap-southeast-2.amazonaws.com'
@@ -529,4 +526,3 @@ payload:
   - 'www.98tuch.net'
   - 'www.picnew.org'
   - 'www.u79pk.com'
-  - 'pixiv.rsshub.app'
