--- a/s/proxy.yaml
+++ b/s/proxy.yaml
@@ -451,6 +451,7 @@ payload:
   - '+.whatsapp.com'
   - '+.whatsapp.net'
   - '+.whoer.net'
+  - '+.withgoogle.com'
   - '+.widevine.com'
   - '+.wikibooks.org'
   - '+.wikidata.org'
